// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlayerStatCardsSection Snapshot Tests renders correctly in error state 1`] = `
<div>
  <div
    class="bg-card rounded-md overflow-hidden mb-3"
  >
    <h2
      class="text-xl font-semibold mb-3"
    >
      Player Statistics
    </h2>
    <p
      class="text-muted-foreground"
    >
      There was an error loading the player details. Please try again later or adjust your filters.
    </p>
  </div>
</div>
`;

exports[`PlayerStatCardsSection Snapshot Tests renders correctly in loading state 1`] = `
<div>
  <div
    class="bg-card rounded-md overflow-hidden mb-3"
  >
    <h2
      class="text-xl font-semibold mb-3"
    >
      Player Statistics
    </h2>
    <div
      class="grid grid-cols-2 md:grid-cols-4 gap-4"
    >
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="h-4 w-16 bg-kanaliiga-light-brown/30 animate-pulse rounded mb-2"
        />
        <div
          class="h-6 w-12 bg-kanaliiga-light-brown/30 animate-pulse rounded"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerStatCardsSection Snapshot Tests renders correctly when no player stats found 1`] = `
<div>
  <div
    class="bg-card rounded-md overflow-hidden mb-3"
  >
    <h2
      class="text-xl font-semibold mb-3"
    >
      Player Statistics
    </h2>
    <p
      class="text-muted-foreground"
    >
      No player stats found.
    </p>
  </div>
</div>
`;

exports[`PlayerStatCardsSection Snapshot Tests renders correctly with player stats data 1`] = `
<div>
  <div
    class="bg-card rounded-md overflow-hidden mb-3"
  >
    <h2
      class="text-xl font-semibold mb-3"
    >
      Player Statistics
    </h2>
    <div
      class="grid grid-cols-2 md:grid-cols-4 gap-4"
    >
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          Maps played
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          25
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          Kills
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          520
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          Deaths
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          410
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          Assists
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          85
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          K/D Ratio
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          1.27
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          ADR
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          82.5
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          HS%
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          48.2%
        </div>
      </div>
      <div
        class="bg-kanaliiga-light-brown/10 p-4 rounded-md"
      >
        <div
          class="text-muted-foreground text-sm"
        >
          Rating
        </div>
        <div
          class="text-xl font-semibold mt-1"
        >
          1.15
        </div>
      </div>
    </div>
  </div>
</div>
`;
